# vscode-development-environment

./: .yamllint  DEVPLAN.md  Taskfile.yml  Taskfile.yml.old1  bootstrap.sh  dev-requirements.txt  git_fixer.py  git_magic.py  init_all.py  install_dev_deps.py  main.py  package-lock.json  pyproject.toml  setup_git.py  setup_python.py
.devcontainer/: devcontainer.json  setup_git.sh
